2.9 Apr 23, 2007
----------------

* fix bug with multiple validators on a field (mckneisler, monte)
* fix bug with initialization of multiple forms (schildi, monte)
* fix looping on non-numeric index arrays (kayk, monte)

2.8 Aug 7, 2006
---------------

* fix bug with failed fields function (kills, monte)

2.7 March 29, 2006
------------------

* add SMARTY_VALIDATE_DEFAULT_FORM constant (kills, monte)
* split up is_valid process for easier method subclassing (kills, monte)
* fix more PHP 5 date problems (kills, monte)
* fix PHP 5.1 problem with isDate (sguillory6, monte)
* fix bug with duplicate error messages (monte)
* fix problem when is_valid() called multiple times (monte)
* fix problem with testing array keys in zero-index fields (andrea_c75,monte)
* fix undefined index notice (Temas, monte)

2.6 Aug 17, 2005
----------------

* fix variable reference notice (boots, monte)
* fix error with array validation (monte)
* fix error when form is redrawn and no validation was done
  but error could still show (monte)
* fix typo in isLength plugin (rainco, monte)
* fix bug when using append (monte)
* make is_valid return true if no validators defined (Pete Darwin, monte)
* add ability to pass parameters to transform in register_validator()

2.5 May 17, 2005
----------------

* fix bug with isRange criteria (Alexey Kuimov, monte)
* fix problems with looping validators that have been
  registered/unregistered (monte)
* fix bug with assign/append in validator tags (monte)
* fix default transform function, errors on non-empty value (monte)
* fix undefined index notices (rainco, monte)
* change e-mail validator logic to simpler method (monte)
* give better error when registering a validator with
  unregistered form (monte)
* fix some PHP notices (monte)

2.4 April 4, 2005
-----------------

* fix ccExpDate criteria bug, it didn't work (monte)
* add set_page() function, update README (monte)
* add register_validator() function, update README (monte)