@@ -7,10 +7,10 @@ AUTHOR:
     Monte Ohrt (monte [AT] ohrt [DOT] com)
 
 VERSION:
-    2.9
+    2.9-dev
     
 DATE:
-    April 23rd, 2007
+    February 7th, 2005
 
 WEBSITE:
     http://www.phpinsider.com/php/code/SmartyValidate/
